# TWIL

./: .gitignore  404.html  CNAME  README.md  _config.yml  index.html  minimal-mistakes-jekyll.gemspec  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml
1. 2021.07.04 - 2021.08.08/: README.md
1. 2021.07.04 - 2021.08.08/00. 2021. 07. 04/이태현/: 테스트.md
1. 2021.07.04 - 2021.08.08/1주차( - 2021.07.11)/김주혜/: 210707.md
1. 2021.07.04 - 2021.08.08/1주차( - 2021.07.11)/성승익/: 00.Ruby on rails란 무엇인가.md
1기/: index.md
1기/박지연/: index.md
1기/박지연/2021-07-11-TypeScript의-기초/: index.html
1기/성승익/: index.md
1기/신태범/: index.md
1기/이동근/: index.md
1기/이종호/: index.md
1기/이태현/: index.md
1기/정선미/: index.md
2기/이태현/: index.md
_data/: authors.yml  navigation.yml  ui-text.yml
_includes/: page__meta.html  posts-sub-category.html
_layouts/: archive-subtoc.html  archive-toc.html  category.html  posts.html  sub-category.html
_pages/: 1기.md  2기.md  about.md  categories.md  tags.md
_posts/2기/: 2021-07-18-자바의-연산자.md
_sass/minimal-mistakes/: _navigation.scss  _page.scss  _sidebar.scss
_site/: feed.xml  index.html  robots.txt  sitemap.xml
category/: 1기-0주차-이태현.md
css/: custom.css
docs/: ads.txt  index.md
docs/about-twil/: index.md
docs/guideline/: index.md
docs/md-syntax/: index.md
docs/writing-guideline/: index.md
docs_src/guideline/: test.py
docs_src/md-syntax/: test.py
guideline/: index.html
overrides/: main.html
search/: search_index.json
writing-guideline/: index.html
(+212 files in other folders)
