[tool.poetry]
name = "TWIL"
version = "3"
description = "This Week I Learned, TWIL"
authors = ["weekwith.me <leedobby@weekwith.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.2.3"
mkdocs-material = "^7.3.4"
mkdocs-markdownextradata-plugin = "^0.2.4"
PyYAML = "^6.0"
mdx-include = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
